syntax = "proto3";
package dymensionxyz.dymension.sequencer;

option go_package = "github.com/dymensionxyz/dymension/v3/x/sequencer/types";
import "dymension/sequencer/description.proto"; 
import "dymension/sequencer/operating_status.proto"; 

import "cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/staking/v1beta1/staking.proto";

import "cosmos/msg/v1/msg.proto";

// Sequencer defines a sequencer identified by its' address (sequencerAddress).
// The sequencer could be attached to only one rollapp (rollappId).
message Sequencer {
  // sequencerAddress is the bech32-encoded address of the sequencer account which is the account that the message was sent from.
  string sequencerAddress = 1;
  // pubkey is the public key of the sequencers' dymint client, as a Protobuf Any.
  google.protobuf.Any dymintPubKey = 2 [(cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey"];
  // rollappId defines the rollapp to which the sequencer belongs.
  string rollappId = 3;
  // description defines the descriptive terms for the sequencer.
  Description description = 4 [(gogoproto.nullable) = false];

  // jailed defined whether the validator has been jailed from bonded status or not.
  bool jailed = 5;
  // status is the validator status (bonded/unbonding/unbonded).
  OperatingStatus status = 6;

  // tokens define the delegated tokens (incl. self-delegation).
  string tokens = 7 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable)   = false
  ];

    // unbonding_height defines, if unbonding, the height at which this validator has begun unbonding.
  int64 unbonding_height = 8;
  // unbonding_time defines, if unbonding, the min time for the validator to complete unbonding.
  google.protobuf.Timestamp unbonding_time = 9 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];

}

